test/files/neg/names-defaults-neg-ref.check
names-defaults-neg-ref.scala:3: error: in <$anon: A2235 with B2235>, multiple overloaded alternatives of method f define default arguments.
The members with defaults are defined in trait B2235 and trait A2235.
  new A2235 with B2235
      ^
names-defaults-neg-ref.scala:7: error: in class A, multiple overloaded alternatives of method foo define default arguments.
class A {
      ^
names-defaults-neg-ref.scala:17: error: in class C, multiple overloaded alternatives of method bar define default arguments.
The members with defaults are defined in class C and class B.
class C extends B {
      ^
names-defaults-neg-ref.scala:21: error: incompatible type in overriding
def bar$default$1: String (defined in class B);
 found   : => Int
 required: => String
  def bar(i: Int = 129083) = i
          ^
four errors found
